--- a/cosc473/View/style.css
+++ b/cosc473/View/style.css
@@ -10,10 +10,10 @@ body {
 .header {
   width: 30%;
   margin: 50px auto 0px;
-  color: white;
-  background: #5F9EA0;
+  color: black;
+  background: #DC143C;
   text-align: center;
-  border: 1px solid #B0C4DE;
+  border: 1px solid #DC143C;
   border-bottom: none;
   border-radius: 10px 10px 0px 0px;
   padding: 20px;
@@ -46,7 +46,24 @@ form, .content {
   padding: 10px;
   font-size: 15px;
   color: white;
-  background: #5F9EA0;
+  background: #DC143C;
   border: none;
   border-radius: 5px;
+}/*
+.error {
+  width: 92%; 
+  margin: 0px auto; 
+  padding: 10px; 
+  border: 1px solid #a94442; 
+  color: #a94442; 
+  background: #f2dede; 
+  border-radius: 5px; 
+  text-align: left;
 }
+.success {
+  color: #3c763d; 
+  background: #dff0d8; 
+  border: 1px solid #3c763d;
+  margin-bottom: 20px;
+}
+/*
