--- a/cosc473/View/style.css
+++ b/cosc473/View/style.css
@@ -6,6 +6,12 @@ body {
   font-size: 120%;
   background: white;
 }
+p{
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+}
 h1{
   text-align: center;
   color: #ad1836;
@@ -14,7 +20,7 @@ h1{
 .header {
   width: 30%;
   margin: 50px auto 0px;
-  color: black;
+  color: white;
   background: #ad1836;
   text-align: center;
   border: 1px solid #ad1836;
